fix: stratitem glowing btn cut off

--- a/client/src/components/StratItem/StratItem.scss
+++ b/client/src/components/StratItem/StratItem.scss
@@ -125,6 +125,7 @@
     @include spacing('gap', '2xs');
     @include spacing('margin-top', '2xs');
 
+    margin-bottom: 1px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
